# gpui-video-player

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.cursor/rules/: rust-and-gpui.mdc
docs/: video-memory.md
examples/: element_player.rs  looping.rs  minimal.rs  sized_player.rs  video_player.rs  with_controls.rs
src/: advanced_gpu_renderer.rs  element.rs  error.rs  gpu_video_renderer.rs  lib.rs  video.rs  video_player.rs
