[package]
name = "gpui-video-player"
version = "0.1.0"
edition = "2024"
exclude = ["assets"]
authors = ["nemurubaka <cijiugechu@gmail.com>"]
description = "A video player library for gpui applications, built on top of GStreamer."
homepage = "https://github.com/cijiugechu/gpui-video-player"
repository = "https://github.com/cijiugechu/gpui-video-player"
license = "MIT"
readme = "README.md"
keywords = ["gpui", "video", "player", "gstreamer"]
categories = ["multimedia"]
documentation = "https://docs.rs/gpui-video-player"

[dependencies]
gpui = "0.2"
gstreamer = "0.24"
gstreamer-app = "0.24" # appsink
gstreamer-base = "0.24" # basesrc
gstreamer-video = "0.24" # video info/frames (stride-aware copies)
glib = "0.21" # gobject traits and error type
log = "0.4"
thiserror = "1"
url = "2" # media uri
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp"] }
smallvec = "1"
yuv = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-video = "0.4"
core-foundation = "0.10"

[dev-dependencies]
env_logger = "0.11"
gpui-component = "0.2"